# QA_Selenium

./: __init__.py  conftest.py  current_weather.py  parse_selenium.py  pyproject.toml
base/: base_page.py
pages/: home_page_locators.py
pom/: home_page.py
tests/: test_homepage.py
