[tool.poetry]
name = "qa-selenium"
version = "0.1.0"
description = ""
authors = ["Andrew Gerasimchik <gerasimchick@tut.by>"]
readme = "README.md"
packages = [{include = "qa_selenium"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
pytest = "^7.1.3"
webdriver-manager = "^3.8.3"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
